--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-# pyinstaller  TODO: Failing on Python 3.3 - reason unknonwn.  Diagnose and fix
+# pyinstaller  TODO: Failing on Python 3.3 - reason unknown.  Diagnose and fix
 pdoc
 flake8
