Add IDE files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
+# Bytecode Files
 __pycache__
 *.py[cod]
 *$py.class
+
+# OB Taxonomy Files
 solar-taxonomy
 
 # Build files from docs
 docs/build/
 
-# Created by MacOS
+# OS Generated Files
 .DS_Store
+
+# IDE Config Files
+.idea
