Data Model can now export XML and JSON. (#64)
* Added code to taxonomy_semantic.py to extract arcrole relationships from _def.xml. Created a first data model class named Entrypoint representing an instance of a document corresponding to a particular entry point. Constructor uses arcrole relationships to deduce what tables belong in the document. Added unit test for this class.

* Corrected my print statements to work in Python 3

* Issue #22 - Added logic to Entrypoint class to look up which table a given concept belongs to, and to distinguish abstract concepts (lineItems, Abstracts, Domains, etc) from actually-writeable concepts.

* Issue #22 - Added a .sufficientContext() method to EntryPoint which identifies whether or not sufficient context is provided to write a fact for a named concept. Checks for appropriate time duration/instant so far. Next step is to check the required table axes are present as well.

* Issue #22 - EntryPoint.sufficientContext() now checks that the required table axes are present in the given context.

* Issue #22 - EntryPoint .set() and .get() methods now store and retrieve facts.

* Corrected comment

* Issue #22 - moved data_model and test_data_model to the new locations required by the directory restructure

* Updated my unit test to be Python3 compatible by changing assertItemsEqual to assertCountEqual.

* Wrote test in a way that works in either Python2 or Python3

* Issue #25 - Entrypoint now takes taxonomy_semantic instance as an argument to constructor, instead of creating its own

* Issue #25 - Created singleton accessor method getTaxonomy() in taxonomy.py that you can call instead of instantiating.

* Issue #26 - Entrypoint.set() takes keyword args, either a 'context' keyword arg providing a Context object, or else separate instant/duration/entity/axes keyword args which are together used to create a Context object.

* Data model improvements: now stores facts in a structure of nested dicts keyed first 

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+lxml==4.2.5
+pdoc==0.3.2
+six==1.12.0
 enum34==1.1.6
 
 # pytest
@@ -11,3 +14,4 @@ pytest-cov==2.6.0
 Sphinx==1.8.2
 sphinx-rtd-theme==0.4.2
 sphinxcontrib-websupport==1.1.0
+
