--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ python:
 - 3.5
 - 3.6
 
+before_install:
+- pip install -U pip
+- python setup.py install
+
 script:
 - scripts/setup-dev.sh;
 - scripts/tests.sh;
