--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,14 @@ python:
 - 3.5
 - 3.6
 
+script:
+- scripts/setup-dev.sh
+
 before_install:
 - pip install -U pip
 - python setup.py install
 
 script:
-- scripts/setup-dev.sh;
 - scripts/tests.sh;
 - scripts/tests-cli.sh
 
