--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,12 @@ python:
 - 3.5
 - 3.6
 
+before_install:
+- scripts/setup-dev.sh
+- pip install -U pip
+- python setup.py install
+
 script:
-- scripts/setup-dev.sh;
 - scripts/tests.sh;
 - scripts/tests-cli.sh
 
